Remove tilt from hero image and fix body overflow due to glitch effect

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,7 @@ body {
     font-family: "Space Mono";
     color: whitesmoke;
     background-color: rgba(0, 0, 0, 0.952);
+    overflow-x: hidden;
 }
 
 /* ---LAYOUT--- */
